# light-torch

./: README.md  pyproject.toml
light_torch/: data.py  module.py  train.py  transform.py
light_torch/eval/: collector.py
light_torch/log/: base.py  cli.py
light_torch/module/: base.py
light_torch/utils/: device.py  misc.py
